[tool.poetry]
name = "yubrary"
version = "0.1.1"
description = "yuuta_library"
authors = ["YAMASHITA Yuta <proyuuta0618188188@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
